--- a/develop/blocks/object-finances/object-finances.pug
+++ b/develop/blocks/object-finances/object-finances.pug
@@ -67,8 +67,8 @@ mixin object-finances()
                             //- | &nbsp;
         +e.controls-wrapper
             +e.controls
-                button.jump.prev
-                button.scroll.prev Назад
+                button.jump.prev.hidden
+                button.scroll.prev.hidden Назад
                 button.scroll.next Вперед
                 button.jump.next
         +e.line-chart
@@ -77,8 +77,8 @@ mixin object-finances()
             #lineChart
         +e.controls-wrapper
             +e.controls
-                button.jump.prev
-                button.scroll.prev Назад
+                button.jump.prev.hidden
+                button.scroll.prev.hidden Назад
                 button.scroll.next Вперед
                 button.jump.next
         +e.column-chart
@@ -87,8 +87,8 @@ mixin object-finances()
             #columnChart
         +e.controls-wrapper
             +e.controls
-                button.jump.prev
-                button.scroll.prev Назад
+                button.jump.prev.hidden
+                button.scroll.prev.hidden Назад
                 button.scroll.next Вперед
                 button.jump.next
         +e.vr
