--- a/develop/blocks/page-navigation/page-navigation.pug
+++ b/develop/blocks/page-navigation/page-navigation.pug
@@ -1,5 +1,5 @@
-mixin page-navigation
-    +b.NAV.page-navigation
+mixin page-navigation(mod)
+    +b.NAV.page-navigation(class=mod ? mod : '')
         +e.controls
             btn.control-btn.prev(type='button')
             btn.control-btn.next(type='button')
