--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -1,5 +1,5 @@
 mixin doc-footer()
-    // build:js js/vendor.js 
+    // build:js js/vendor.js
     script(src='libs/jquery.min.js')
     script(src='libs/slick/slick.min.js')
     script(src='libs/jquery.inputmask.min.js')
@@ -16,6 +16,7 @@ mixin doc-footer()
     script(src='libs/modal-video-master/js/jquery-modal-video.min.js')
     script(src='libs/highcharts/highcharts.js')
     script(src='libs/aos/aos.min.js')
+    script(src='libs/fontfaceobserver.min.js')
     //- script(src='libs/stickyfill.min.js')
 
     //- script(src='libs/lazyload.js')
