--- a/develop/blocks/monitoring-graph/monitoring-graph.pug
+++ b/develop/blocks/monitoring-graph/monitoring-graph.pug
@@ -6,7 +6,8 @@ mixin monitoring-graph()
         +e.caption
             +e.caption-block
                 +e.caption-value 1 124 760.78 ₽
-                +e.caption-label Выплачено за все время, до НДФЛ  
+                +e.caption-label Выплачено за все время
             +e.caption-block
                 +e.caption-value 99 124 760.78 ₽
-                +e.caption-label Выплачено за 12 месяцев, до НДФЛ  
+                +e.caption-label Выплачено за 12 месяцев
+            +e.caption-type До НДФЛ
