--- a/develop/jade/account-page-7.pug
+++ b/develop/jade/account-page-7.pug
@@ -10,9 +10,9 @@ html(lang='ru')
         +main-header
         +account-layout
             +account-monitoring
-                +e.header
+                +e.header.--funds
                     +e.title Все фонды
-                    +e.A.link.application-trigger(href='#') На продажу
+                    +e.A.link.--right.--big.application-trigger(href='#') На продажу
                         +icon('l-arrow')
                 +e.toggles
                     +e.toggle
