--- a/develop/blocks/account-details/account-details.pug
+++ b/develop/blocks/account-details/account-details.pug
@@ -29,7 +29,9 @@ mixin account-details()
                                     +base-radio('radio10', 'radio1', '0', 'Да', true)
                                 +e.radio
                                     +base-radio('radio11', 'radio1', '1', 'Нет')
-                    +e.BUTTON.submit(type='button') Далее
+                    +e.actions
+                        +e.BUTTON.action.__submit(type='button') Далее
+                        +e.BUTTON.action.__skip(type='button') Заполнить позже
         +e.step
             +e.step-header
                 +e.A.step-link(href='#')
@@ -77,7 +79,9 @@ mixin account-details()
                     +e.inputs-row
                         +e.input
                             +base-checkbox('address_same', 'addressSame', 'Совпадает с адресом проживания')
-                    +e.BUTTON.submit(type='button') Далее
+                    +e.actions
+                        +e.BUTTON.action.__submit(type='button') Далее
+                        +e.BUTTON.action.__skip(type='button') Заполнить позже
         +e.step
             +e.step-header
                 +e.A.step-link(href='#')
@@ -95,7 +99,8 @@ mixin account-details()
                             +base-input-autocomplete('text', 'bankBik', 'bank_bik', 'БИК Вашего отделения банка', false)
                         +e.input
                             +base-input('text', 'bankAccount', 'bank_account', 'Расчетный счет', false)
-                    +e.BUTTON.submit(type='button') Далее
+                    +e.actions
+                        +e.BUTTON.action.__submit(type='button') Далее
         +e.step
             +e.step-header
                 +e.A.step-link(href='#')
@@ -166,7 +171,8 @@ mixin account-details()
                                     +base-radio('radio70', 'radio7', '0', 'Да')
                                 +e.radio
                                     +base-radio('radio71', 'radio7', '1', 'Нет', true)
-                    +e.BUTTON.submit(type='button') Далее
+                    +e.actions
+                        +e.BUTTON.action.__submit(type='button') Далее
         +e.step
             +e.step-header
                 +e.A.step-link(href='#')
@@ -191,4 +197,5 @@ mixin account-details()
                         +e.LABEL.upload-label СНИЛС
                         +e.FORM.file-upload#dropzone4
                             +e.SPAN.upload-status
-                +e.BUTTON.submit(type='button') Далее
+                +e.actions
+                    +e.BUTTON.action.__submit(type='button') Далее
