--- a/develop/blocks/account-details/account-details.scss
+++ b/develop/blocks/account-details/account-details.scss
@@ -239,27 +239,41 @@
         font-size: 8px;
     }
 
-    &__submit {
+    &__actions {
+        display: flex;
+        flex-flow: row wrap;
+        padding-top: 32px;
+        margin-bottom: -12px;
+    }
+
+    &__action {
         @include btn-reset;
         display: block;
-        width: 96px;
+        padding: 0 24px;
         height: 28px;
-        margin-top: 32px;
         margin-right: 16px;
+        margin-bottom: 12px;
 
         color: $text-color;
         font-size: 14px;
         font-weight: 500;
         text-decoration: none;
 
-        background: #e1e1e1;
         border-radius: 8px;
 
-        transition: background-color 300ms ease;
+        transition: opacity 300ms ease;
 
         &:hover {
-            background-color: $theme-color;
+            opacity: 0.6;
         }
+    }
+
+    &__skip {
+        background: #e1e1e1;
+    }
+
+    &__submit {
+        background-color: $theme-color;
     }
 }
 
