--- a/develop/blocks/account-monitoring/account-monitoring.scss
+++ b/develop/blocks/account-monitoring/account-monitoring.scss
@@ -5,7 +5,7 @@
     }
 
     &__body {
-        padding-top: 32px;
+        // padding-top: 32px;
     }
 }
 
@@ -29,7 +29,7 @@
         }
 
         &__body {
-            padding-top: 42px;
+            // padding-top: 42px;
             width: 50%;
             flex: 1 1 auto;
 
