--- a/develop/blocks/account-monitoring/account-monitoring.scss
+++ b/develop/blocks/account-monitoring/account-monitoring.scss
@@ -2,6 +2,7 @@
     &__sidebar {
         width: calc(100% + 40px);
         margin-left: -20px;
+        margin-bottom: 20px;
     }
 
     &__body {
