--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -51,6 +51,7 @@
         padding: 16px 0;
         display: flex;
         align-items: flex-start;
+        justify-content: space-between;
         border-top: 1px solid rgba(#919191, 0.2);
         border-bottom: 1px solid rgba(#919191, 0.2);
 
